--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
             <a href="/" class="nav-logo">DISTRIBICS</a>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
-                <li><a href="/papers">Papers</a></li>
+                <li><a href="distribicstechnology.github.io/papers">Papers</a></li>
             </ul>
         </nav>
     </header>
