--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
         <nav class="nav-container">
             <a href="/" class="nav-logo">DISTRIBICS</a>
             <ul class="nav-links">
-                <li><a href="/">Home</a></li>
+                <li><a href="/">distribicstechnology.github.io/Home</a></li>
                 <li><a href="distribicstechnology.github.io/papers">Papers</a></li>
             </ul>
         </nav>
