--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        Distribics Technology pioneers the intersection of distributed systems and advanced computational paradigms. We explore the emergent behaviors of complex networks, developing frameworks that mirror the organic evolution of natural systems.
+                        Distribics Technology develops innovative technology aross multiple domains. We apply insights from behavioral economics, complexity science, and everyday human experience to advance the edge of what's possible.  
                     </p>
                     <p>
                         Our research focuses on self-organizing architectures, fractal computing patterns, and the mathematical elegance underlying distributed intelligence. Through rigorous analysis and innovative implementation, we push the boundaries of what's possible in decentralized computation.
