--- a/index.html
+++ b/index.html
@@ -774,10 +774,10 @@
                         Distribics Technology develops innovative technology aross multiple domains. We apply insights from behavioral economics, complexity science, and everyday human experience to advance the edge of what's possible.  
                     </p>
                     <p>
-                        Our research focuses on self-organizing architectures, fractal computing patterns, and the mathematical elegance underlying distributed intelligence. Through rigorous analysis and innovative implementation, we push the boundaries of what's possible in decentralized computation.
+                        Our computation.
                     </p>
                     <p>
-                        As systems evolve, so do we—constantly adapting, learning, and discovering new pathways in the vast landscape of distributed technology.
+                        distributed technology.
                     </p>
                 </div>
             </div>
