--- a/papers/index.html
+++ b/papers/index.html
@@ -305,10 +305,10 @@
             <!-- Paper 1 -->
             <div class="paper-card">
                 <div class="paper-year">2025</div>
-                <h2 class="paper-title">Paper 1 on Distribics Technology</h2>
-                <div class="paper-authors">Distribics Research Team</div>
+                <h2 class="paper-title">The Problem with Media Recommender Systems Today</h2>
+                <div class="paper-authors">Distribics Research</div>
                 <p class="paper-abstract">
-                    An exploration of fundamental principles and applications of Distribics Technology, examining its theoretical foundations and practical implementations in modern distributed systems.
+                    A fundamental flaw in the way media recommendation system currently opeerate lies at the heart of why digital experiences often levae us dissatisfied and sometimes and unwell. A new approach to indexing and discivering content is the solution.
                 </p>
                 <div class="paper-links">
                     <a href="paper1.html" class="paper-link">Read Paper</a>
