--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        Distribics Technology develops innovative technology aross multiple domains. We apply insights from behavioral economics, complexity science, and everyday human experience to advance the edge of what's possible.  
+                        Distribics Technology develops innovative technology aross multiple domains. We apply happy insights from behavioral economics, complexity science, and everyday human experience to advance the edge of what's possible.  
                     </p>
                     <p>
                         Our computation.
