--- a/index.html
+++ b/index.html
@@ -672,12 +672,11 @@
         <nav class="nav-container">
             <a href="/" class="nav-logo">DISTRIBICS</a>
             <ul class="nav-links">
-                <li><a href="/">distribicstechnology.github.io/Home</a></li>
-                <li><a href="distribicstechnology.github.io/papers">Papers</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/papers">Papers</a></li>
             </ul>
         </nav>
     </header>
-
     <!-- Hero Section -->
     <div class="hero-section">
         <div class="hero-content" id="heroContent">
