--- a/papers/index.html
+++ b/papers/index.html
@@ -308,7 +308,7 @@
                 <h2 class="paper-title">The Problem with Media Recommender Systems Today</h2>
                 <div class="paper-authors">Distribics Research</div>
                 <p class="paper-abstract">
-                      A fundamental flaw in the way media recommendation system currently operate lies at the heart of why digital experiences often leave us dissatisfied and sometimes and unwell. A new approach to indexing and discovering content is the solution.                </p>
+                      A fundamental flaw in the way media recommendation system currently operate lies at the heart of why digital experiences often leave us dissatisfied and sometimes unwell. A new approach to indexing and discovering content is the solution.                </p>
                 <div class="paper-links">
                     <a href="paper1.html" class="paper-link">Read Paper</a>
                     <a href="paper1.pdf" class="paper-link">PDF</a>
