--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -307,7 +307,7 @@
             </p>
 
             <p>
-                Failing to appreciate this relationship between our deepest thoughts and desires and content recommendation design is part of why social media, while fun at times, makes some people miserable and many of us dissatisfied, and yet we don't reduce its usage. There are many contexts where recommender systems are less concerning, such as in the curation of specific media, like music or movie recommendations. But our online environments are becoming more than just entertainment delivery systems and are increasingly immersive proxies for the real world. As more of our analog life moves online, these concerns get more significant.
+                Failing to appreciate this relationship between our deepest thoughts and desires and content recommendation design is part of why social media, while fun at times, makes some people miserable and many of us dissatisfied, and yet we don't reduce its usage. There are many contexts where recommender systems are less concerning, such as in the curation of specific media, like music or movie recommendations. But our online environments are becoming more than just entertainment delivery systems and are increasingly immersive proxies for the real world. As more of our analog lives move online, these concerns become more significant.
             </p>
 
             <p>
