--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -283,7 +283,7 @@
 
         <section class="paper-content">
             <p>
-                It's well established that having freewill depends not just on having the freedom of choice, but also on the freedom of one's desires. If our desires are not aligned with our choices, or if some external force constrains our desires, then the freedom to act alone may not be sufficient for our freedom of choice. This insight about how our desires relate to our freedom is relevant today for the lives we inhabit inside media recommendation systems, because these systems often ignore our deepest desires.
+                It's well established that self determination, sometimes called freewill depending on the context, is contingent not just on having the freedom of choice, but also on the freedom of one's desires. If our desires are not aligned with our choices, or if some external force constrains our desires, then the freedom to act alone may not be sufficient for our freedom of choice. This insight about how our desires relate to our freedom is relevant today for the lives we inhabit inside media recommendation systems, because these systems often ignore our deepest desires.
             </p>
 
             <p>
