--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -287,11 +287,11 @@
             </p>
 
             <p>
-                Our digital lives are immersed in recommender systems. Most of them work by modeling user choices and using the model to predict how content will cause us to act. For instance, on many platforms the recommendations are selected based on what the model predicts will keep us on the platform the longest.
+                Our digital lives are immersed in recommender systems. all of them generally work by algorithmically selecting content automatically suggested to the user based on information about the user. This information is often associated with previous content selections made by the user but may also include other data such as psycological or marketing profiles of the user, and large language models may also be used to predict recommendations. Importantly, the recommendations made are also dependent on any other business goals the platform persues. For instance, the business may want to sort recommendations based on how content causes the user to act in order to keep users on the platform longer.
             </p>
 
             <p>
-                To build these models of users, existing platforms rely almost entirely on the implicit actions we take, like clicks and watch time, rather than explicit inputs, like a user-reported preference or feeling. This is a problem as our emotions are obviously fundamental to the development of our desires and the execution of our choices. But if systems do not provide a means of easily reflecting our feelings and our desires in our choices then our actual desires and our explicit actions may start to diverge. For example, we might find that despite spending considerable time on a platform we also quite dislike it.
+                To make these recommendations existing systems rely almost entirely on the implicit actions we take, like clicks and watch time, rather than explicit inputs, like a user-reported preference or feeling. This is a problem as our emotions are obviously fundamental to the development of our desires and the execution of our choices. But if systems do not provide a means of easily reflecting our feelings and our desires in our choices then our actual desires and our explicit actions may start to diverge. For example, we might find that despite spending considerable time on a platform we also quite dislike it.
             </p>
 
             <p>
