--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -287,7 +287,7 @@
             </p>
 
             <p>
-                Our digital lives are immersed in recommender systems. all of them generally work by algorithmically selecting content automatically suggested to the user based on information about the user. This information is often associated with previous content selections made by the user but may also include other data such as psycological or marketing profiles of the user, and large language models may also be used to predict recommendations. Importantly, the recommendations made are also dependent on any other business goals the platform persues. For instance, the business may want to sort recommendations based on how content causes the user to act in order to keep users on the platform longer.
+                Our digital lives are immersed in recommender systems, and they generally work by algorithmically selecting content to be automatically suggested to the user based on information about the user. This information is often associated with previous content selections made by the user but may also include other data such as psycological or marketing profiles of the user, and large language models may also be used to predict recommendations. Importantly, the recommendations made are also dependent on any other business goals the platform persues. For instance, the business may want to sort recommendations based on how content causes the user to act in order to keep users on the platform longer.
             </p>
 
             <p>
