--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -291,7 +291,7 @@
             </p>
 
             <p>
-                To make these recommendations existing systems rely almost entirely on the implicit actions we take, like clicks and watch time, rather than explicit inputs, like a user-reported preference or feelings. This is a problem as our emotions are obviously fundamental to the development of our desires and the execution of our choices. But if systems do not provide a means of easily reflecting our feelings and our desires in our choices then our actual desires and our explicit actions may start to diverge. For example, we might find that despite spending considerable time on a platform we also quite dislike it.
+                To make these recommendations existing systems rely almost entirely on the implicit actions we take, like clicks and watch time, rather than explicit inputs, like a user-reported preference or emotion. This is a problem as our emotions are obviously fundamental to the development of our desires and the execution of our choices. But if systems do not provide a means of easily reflecting our feelings and our desires in our choices then our actual desires and our explicit actions may start to diverge. For example, we might find that despite spending considerable time on a platform we also quite dislike it.
             </p>
 
             <p>
