--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -299,7 +299,7 @@
             </p>
 
             <p>
-                But current recommendation systems don't consider our internal mental states in making their content selections, so as we engage the current platforms we're unknowingly defining our recommendations based on a limited set of inputs that poorly reflect who we are. These inputs narrow our future recommendations, which increases the probability that you'll click on more of what you did earlier. And when you do click on more of the same, that in turn, strengthens existing predictions about what we get to see, and your future recommendationsare are narrowed again, and so on.
+                But current recommendation systems don't consider our internal mental states in making their content selections, so as we engage the current platforms we're unknowingly defining our recommendations based on a limited set of inputs that poorly reflect who we are. These inputs narrow our future recommendations, which increases the probability that we'll click on more of what we did earlier. And when we do click on more of the same, that in turn, strengthens existing predictions about what we get to see, and our future recommendationsare are narrowed again, and so on.
             </p>
 
             <p>
