--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -315,7 +315,7 @@
             </p>
 
             <p>
-                Algorithms may determine digital design but they should enable our deepest desires to determine our digital experience.
+                The era of choice recursion in content recommendation must end. The algorithms that determine digital design should not also determine who we, who we become, or how we define our own satisfaction. Rather, they should enable us to find digital experiences that reflect our changing internal desires as accurately, and with as little latency, as possible.
             </p>
         </section>
 
