--- a/papers/index.html
+++ b/papers/index.html
@@ -306,7 +306,7 @@
             <div class="paper-card">
                 <div class="paper-year">2025</div>
                 <h2 class="paper-title">The Problem with Media Recommender Systems Today</h2>
-                <div class="paper-authors">Distribics Research</div>
+                <div class="paper-authors">Bill Seaward</div>
                 <p class="paper-abstract">
                       A fundamental flaw in the way media recommendation system currently operate lies at the heart of why digital experiences often leave us dissatisfied and sometimes unwell. A new approach to indexing and discovering content is the solution.                </p>
                 <div class="paper-links">
