--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
             margin-top: 0; /* Header is fixed, so no margin needed */
         }
 
-        /* About Us Section */
+        /* About Us Section - Updated to continue hero background */
         .about-section {
             padding: 100px 40px;
-            background: linear-gradient(180deg, #0a0e27 0%, #0f1229 100%);
+            /* Removed the black background to continue the body gradient */
+            background: transparent;
             position: relative;
         }
 
@@ -138,6 +139,60 @@
             margin: 40px auto;
         }
 
+        /* Contact Section */
+        .contact-section {
+            padding: 60px 40px 100px;
+            background: transparent;
+            position: relative;
+            text-align: center;
+        }
+
+        .contact-button {
+            display: inline-block;
+            padding: 16px 40px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #8b5cf6 100%);
+            color: white;
+            text-decoration: none;
+            font-size: 1.1rem;
+            font-weight: 500;
+            letter-spacing: 0.02em;
+            border-radius: 50px;
+            box-shadow: 
+                0 4px 15px rgba(102, 126, 234, 0.3),
+                0 0 20px rgba(118, 75, 162, 0.2);
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .contact-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 
+                0 8px 25px rgba(102, 126, 234, 0.4),
+                0 0 30px rgba(118, 75, 162, 0.3);
+            background: linear-gradient(135deg, #7c3aed 0%, #8b5cf6 50%, #a78bfa 100%);
+        }
+
+        .contact-button:active {
+            transform: translateY(0px);
+        }
+
+        .contact-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.6s ease;
+        }
+
+        .contact-button:hover::before {
+            left: 100%;
+        }
+
         /* Mobile responsiveness */
         @media (max-width: 768px) {
             .header-nav {
@@ -152,11 +207,20 @@
                 padding: 60px 20px;
             }
 
+            .contact-section {
+                padding: 40px 20px 80px;
+            }
+
             .about-title {
                 font-size: 2rem;
             }
 
             .about-text {
+                font-size: 1rem;
+            }
+
+            .contact-button {
+                padding: 14px 32px;
                 font-size: 1rem;
             }
         }
@@ -779,6 +843,13 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact-section" id="contact">
+        <a href="mailto:info@distribics.com" class="contact-button">
+            Contact Us
+        </a>
     </section>
 
     <script>
