--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -295,6 +295,13 @@
             </p>
         </section>
 
+         .about-divider {
+            width: 60px;
+            height: 2px;
+            background: linear-gradient(90deg, #667eea, #764ba2);
+            margin: 40px auto;
+        }
+
         /* Contact Section */
         .contact-section {
             padding: 60px 40px 100px;
