--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -146,7 +146,7 @@
 
         .paper-content p {
             margin-bottom: 20px;
-            text-align: justify;
+            text-align: left;
         }
 
         .paper-content ul, .paper-content ol {
@@ -203,7 +203,7 @@
         }
 
         .abstract p {
-            text-align: justify;
+           text-align: left;
             line-height: 1.8;
         }
 
@@ -347,7 +347,7 @@
             </p>
 
             <p>
-                The era of choice recursion in content recommendation must end. The algorithms that determine digital design should not also determine who we, who we become, or how we define our own satisfaction. Rather, they should enable us to find digital experiences that reflect our changing internal desires as accurately, and with as little latency, as possible.
+                As a matter of digital wellbeing, choice recursion in content recommendation should be minimized. The algorithms that determine digital design should not also determine who we are, who we become, or define the terms of our own satisfaction. Rather, they should enable us to find digital experiences that reflect our changing internal desires as accurately, and with as little latency, as possible.
             </p>
         </section>
     </article>
